# chatgantt

./: .gitignore  FEATURES.md  GETTING_STARTED.md  PERMISSIONS.md  chatgantt.config.example.json  docker-compose.yml
backend/: .env.example  Dockerfile  mcp_server.py  pyproject.toml  requirements.txt
backend/agent/: .env.local.example  __init__.py  agent.py  requirements.txt  tools.py
backend/app/: dependencies.py  main.py  settings.py
backend/app/adapters/: base.py  exceptions.py  mock_adapter.py  notion_adapter.py  registry.py
backend/app/adapters/chat/: anthropic_adapter.py  base.py  openai_adapter.py  registry.py
backend/app/adapters/knowledge/: base.py  mock_adapter.py  registry.py  url_adapter.py
backend/app/adapters/notion/: client.py  mappers.py
backend/app/middleware/: sanitization.py
backend/app/models/: blockers.py  chat.py  resources.py  tickets.py  voice.py
backend/app/routers/: blockers.py  chat.py  github.py  health.py  resources.py  tasks.py  voice.py
backend/app/services/: chat_context.py  chat_tools.py  github_config.py  github_poller.py  voice_bridge.py  voice_store.py
backend/scripts/: README.md  provision_notion.py
backend/tests/: test_dependencies.py  test_settings.py
backend/tests/adapters/: test_notion_adapter.py
backend/tests/adapters/notion/: test_client.py  test_mappers.py
backend/tests/agent/: test_tools.py
backend/tests/routers/: test_chat.py  test_voice_token.py
backend/tests/scripts/: test_provision.py
figma/: README.md  index.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
(+59 files in other folders)
