[project]
name = "chatgantt-backend"
version = "0.1.0"
description = "ChatGantt — stateless Gantt chart adapter for ticket providers"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
