[project]
name = "chatgantt-backend"
version = "0.1.0"
description = "ChatGantt — stateless Gantt chart adapter for ticket providers"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "typing-extensions>=4.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "mcp>=1.0.0",
    "livekit-api>=1.0.7",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Test tooling — `uv sync --extra dev`
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
# LiveKit voice agent worker (separate process) — `uv sync --extra agent`
agent = [
    "livekit-agents[anthropic,deepgram,cartesia,silero]~=1.5",
    "python-dotenv",
]

[tool.uv]
# This is an application, not a distributable package — install deps only,
# don't try to build the project as a wheel.
package = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
